; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_uart.c_uart_set_baudrate.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_uart.c_uart_set_baudrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, %struct.TYPE_4__ }
%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i64 }

@UART_NUM_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [15 x i8] c"uart_num error\00", align 1
@ESP_FAIL = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@uart_spinlock = common dso_local global i32* null, align 8
@UART = common dso_local global %struct.TYPE_6__** null, align 8
@REF_CLK_FREQ = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uart_set_baudrate(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @UART_NUM_MAX, align 8
  %10 = icmp ult i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = load i32, i32* @ESP_FAIL, align 4
  %13 = call i32 @UART_CHECK(i32 %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* @ESP_OK, align 4
  store i32 %14, i32* %5, align 4
  %15 = load i32*, i32** @uart_spinlock, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = call i32 @UART_ENTER_CRITICAL(i32* %17)
  %19 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @UART, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %19, i64 %20
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %2
  %28 = load i32, i32* @REF_CLK_FREQ, align 4
  store i32 %28, i32* %6, align 4
  br label %31

29:                                               ; preds = %2
  %30 = call i32 (...) @esp_clk_apb_freq()
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %29, %27
  %32 = load i32, i32* %6, align 4
  %33 = shl i32 %32, 4
  %34 = load i32, i32* %4, align 4
  %35 = sdiv i32 %33, %34
  store i32 %35, i32* %7, align 4
  %36 = load i32, i32* %7, align 4
  %37 = icmp slt i32 %36, 16
  br i1 %37, label %38, label %40

38:                                               ; preds = %31
  %39 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %39, i32* %5, align 4
  br label %57

40:                                               ; preds = %31
  %41 = load i32, i32* %7, align 4
  %42 = ashr i32 %41, 4
  %43 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @UART, align 8
  %44 = load i64, i64* %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %43, i64 %44
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  store i32 %42, i32* %48, align 8
  %49 = load i32, i32* %7, align 4
  %50 = and i32 %49, 15
  %51 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @UART, align 8
  %52 = load i64, i64* %3, align 8
  %53 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %51, i64 %52
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %53, align 8
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 1
  store i32 %50, i32* %56, align 4
  br label %57

57:                                               ; preds = %40, %38
  %58 = load i32*, i32** @uart_spinlock, align 8
  %59 = load i64, i64* %3, align 8
  %60 = getelementptr inbounds i32, i32* %58, i64 %59
  %61 = call i32 @UART_EXIT_CRITICAL(i32* %60)
  %62 = load i32, i32* %5, align 4
  ret i32 %62
}

declare dso_local i32 @UART_CHECK(i32, i8*, i32) #1

declare dso_local i32 @UART_ENTER_CRITICAL(i32*) #1

declare dso_local i32 @esp_clk_apb_freq(...) #1

declare dso_local i32 @UART_EXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
